[package]
name = "LightTorrent"
version = "1.0.4"
edition = "2021"
build = "build.rs"

[[bin]]
name = "LightTorrent"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
tokio = { version = "1", features = ["full"] }
librqbit = { version = "8.1.1", default-features = false, features = ["default-tls"] }
anyhow = "1"
dirs = "5"
rfd = "0.15"
url = "2"
notify-rust = "4.10"
serde = { version = "1.0", features = ["derive"] }
opener = "0.7"
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
